<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/newTodo"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:text="@string/title"
                />

            <EditText
                android:id="@+id/todoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/title"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:text="@string/text"
                />

            <EditText
                android:id="@+id/contents"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/contents"
                android:textAlignment="textStart"
                android:gravity="start"
                />

        </LinearLayout>

        <CheckBox
            android:id="@+id/isComplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textSize="24sp"
            android:text="@string/complete"/>

        <Button
            android:id="@+id/addImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:text="@string/addImage"/>

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:text="@string/save"/>

    </LinearLayout>

</LinearLayout>
